# decluttering_domestic_robot

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: industrial_ci_action.yml
configuration/smallHouse/: mmap.yaml  submap_0.pgm
docs/: doxygen_config.conf
docs/html/: annotated.html  classDCRobot-members.html  classDCRobot.html  classDCRobot__coll__graph.map  classDCRobot__coll__graph.md5  classDetectObject-members.html  classDetectObject.html  classGraspObject-members.html  classGraspObject.html  classNavigation-members.html  classNavigation.html  classObjectSpawner-members.html  classObjectSpawner.html  classes.html  dcrobot_8cpp.html  dcrobot_8cpp__incl.map  dcrobot_8cpp__incl.md5  dcrobot_8hpp.html  dcrobot_8hpp__dep__incl.map  dcrobot_8hpp__dep__incl.md5  dcrobot_8hpp__incl.map  dcrobot_8hpp__incl.md5  dcrobot_8hpp_source.html  dcrobot__node_8cpp.html  dcrobot__node_8cpp__incl.map  dcrobot__node_8cpp__incl.md5  detect__object_8cpp.html  detect__object_8cpp__incl.map  detect__object_8cpp__incl.md5  detect__object_8hpp.html  detect__object_8hpp__dep__incl.map  detect__object_8hpp__dep__incl.md5  detect__object_8hpp__incl.map  detect__object_8hpp__incl.md5  detect__object_8hpp_source.html  dir_000001_000002.html  dir_000001_000003.html  dir_000001_000004.html  dir_000001_000005.html  dir_000002_000000.html  (+49 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
docs/latex/: annotated.tex  classDCRobot.tex  classDCRobot__coll__graph.md5  classDetectObject.tex  classGraspObject.tex  classNavigation.tex  classObjectSpawner.tex  dcrobot_8cpp.tex  dcrobot_8cpp__incl.md5  dcrobot_8hpp.tex  dcrobot_8hpp__dep__incl.md5  dcrobot_8hpp__incl.md5  dcrobot__node_8cpp.tex  dcrobot__node_8cpp__incl.md5  detect__object_8cpp.tex  detect__object_8cpp__incl.md5  detect__object_8hpp.tex  detect__object_8hpp__dep__incl.md5  detect__object_8hpp__incl.md5  files.tex  grasp__object_8cpp.tex  grasp__object_8cpp__incl.md5  grasp__object_8hpp.tex  grasp__object_8hpp__dep__incl.md5  grasp__object_8hpp__incl.md5  index.tex  navigation_8cpp.tex  navigation_8cpp__incl.md5  navigation_8hpp.tex  navigation_8hpp__dep__incl.md5  navigation_8hpp__incl.md5  object__spawner_8cpp.tex  object__spawner_8cpp__incl.md5  object__spawner_8hpp.tex  object__spawner_8hpp__dep__incl.md5  object__spawner_8hpp__incl.md5  refman.tex
include/dcrobot/: dcrobot.hpp
include/detect_object/: detect_object.hpp
include/grasp_object/: grasp_object.hpp
include/navigation/: navigation.hpp
include/object_spawner/: object_spawner.hpp
launch/: simulation.launch
results/: cppcheck_result.txt  cpplint_result.txt
src/: dcrobot.cpp  dcrobot_node.cpp  detect_object.cpp  grasp_object.cpp  navigation.cpp  object_spawner.cpp  object_spawner_node.cpp
test/: dcrobot_test.cpp  detect_object_test.cpp  grasp_object_test.cpp  main.cpp  main_test.test  navigation_test.cpp  navigation_test.test  object_spawner_test.cpp  test_dcrobot.cpp  test_ddrobot.cpp
world/: smallHouse.world
