<?xml version="1.0"?>
<package format="2">
  <name>decluttering_domestic_robot</name>
  <version>0.0.0</version>
  <description>The decluttering_domestic_robot package</description>

  <maintainer email="hrushikesh@todo.todo">hrushikesh</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/HrushikeshBudhale/decluttering_domestic_robot/tree/main</url>

  <author email="jane.doe@example.com">Abhijit Mahalle</author>
  <author email="jane.doe@example.com">Ameya Konkar</author>
  <author email="jane.doe@example.com">Hrushikesh Budhale</author>


  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>fetch_gazebo</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>

  </package>
